force-app/main/default/objects/Account/fields/Healthgrades_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Healthgrades_Pricebook__c</fullName>
    <formula>CASE( Sub_Vertical__c , 
&quot;General Dentistry&quot;, &quot;Healthgrades 1&quot;,
&quot;Oral Surgery&quot;, &quot;Healthgrades 1&quot;, 
&quot;Endodontistry&quot;, &quot;Healthgrades 1&quot;, 
&quot;Optometry&quot;, &quot;Healthgrades 1&quot;,
&quot;Chiropractic&quot;, &quot;Healthgrades 1&quot;,
&quot;Orthodontistry&quot;, &quot;Healthgrades 1&quot;, 
&quot;Pedodontistry&quot;, &quot;Healthgrades 1&quot;, 
&quot;Periodontistry&quot;, &quot;Healthgrades 1&quot;, 
&quot;Prosthodontistry&quot;, &quot;Healthgrades 1&quot;, 
&quot;Dermatology&quot;, &quot;Healthgrades 2&quot;, 
&quot;Ophthalmology&quot;, &quot;Healthgrades 2&quot;, 
&quot;Plastic Surgery&quot;, &quot;Healthgrades 2&quot;, 
&quot;Cosmetic Surgery&quot;, &quot;Healthgrades 2&quot;,
&quot;Podiatry&quot;, &quot;Healthgrades 1&quot;,
&quot;Allergy &amp; Immunology&quot;, &quot;Healthgrades 2&quot;,
&quot;Psychiatry or Mental Health or Substance Rehabilitation&quot;, &quot;Healthgrades 2&quot;,
&quot;Physical Therapy&quot;, &quot;Healthgrades 1&quot;,
&quot;Not Eligible&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Healthgrades Pricebook</label>
    <type>Text</type>
</CustomField>