force-app/main/default/objects/Account/fields/Healthgrades_Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>Healthgrades_Referral_Date__c</fullName>
    <description>Date the Referral was made</description>
    <label>Healthgrades Referral Date</label>
    <type>Date</type>
</CustomField>