force-app/main/default/objects/Account/fields/Healthgrades_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Healthgrades_Referrer__c</fullName>
    <label>Healthgrades Referrer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>