force-app/main/default/objects/Account/fields/HealthScore__c.field-meta.xml
<CustomField>
    <fullName>HealthScore__c</fullName>
    <label>Health Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>