force-app/main/default/objects/Account/fields/Implementation_Rep_RRID__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Rep_RRID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Rep RRID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CS_Round_Robin__c.Id</field>
            <operation>equals</operation>
            <value>012i0000001EJtpAAG</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CS_Round_Robin__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>