force-app/main/default/objects/Account/fields/Intacct_Location__c.field-meta.xml
<CustomField>
    <fullName>Intacct_Location__c</fullName>
    <label>Intacct Location</label>
    <length>10</length>
    <type>Text</type>
</CustomField>