force-app/main/default/objects/Account/fields/Intacct_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Intacct_Vertical__c</fullName>
    <formula>CASE(TEXT(Industry), 
  &quot;Dental&quot;, &quot;E001&quot;, 
  &quot;Vision&quot;, &quot;E002&quot;, 
  &quot;Non-Medical&quot;, &quot;E003&quot;, 
  &quot;Physical Rehabilitation&quot;, &quot;E004&quot;, 
  &quot;Medical&quot;,&quot;E006&quot;, 
  TEXT(Industry) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intacct Vertical</label>
    <type>Text</type>
</CustomField>