force-app/main/default/objects/Account/fields/IntacctID__c.field-meta.xml
<CustomField>
    <fullName>IntacctID__c</fullName>
    <description>Old field that is here temporarily to fix the AppAdmin API</description>
    <label>Old Intacct ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>