force-app/main/default/objects/Account/fields/Is_Group__c.field-meta.xml
<CustomField>
    <fullName>Is_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this field to determine if an account is part of a group of accounts that should be billed together. A set of group accounts will use the parent account to sign/approve contracts or invoice.</description>
    <label>Is Group</label>
    <type>Checkbox</type>
</CustomField>