force-app/main/default/objects/Account/fields/Last_Check_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Check_up_Date__c</fullName>
    <inlineHelpText>The most recent date that a Check-up Case was modified</inlineHelpText>
    <label>Last Check-up Date</label>
    <type>Date</type>
</CustomField>