force-app/main/default/objects/Account/fields/Last_Healthgrades_Scorecard_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Healthgrades_Scorecard_Sent_Date__c</fullName>
    <description>This is used in the process that sends out the Heathgrades scorecard email so an office only gets one email.</description>
    <label>Last Healthgrades Scorecard Sent Date</label>
    <type>Date</type>
</CustomField>