force-app/main/default/objects/Account/fields/Last_HG_Scorecard_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_HG_Scorecard_Date__c</fullName>
    <label>Last HG Scorecard Date</label>
    <type>DateTime</type>
</CustomField>