force-app/main/default/objects/Account/fields/Last_ROE_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_ROE_Date__c</fullName>
    <label>Last ROE Date</label>
    <type>DateTime</type>
</CustomField>