force-app/main/default/objects/Account/fields/Last_ROE_Task_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_ROE_Task_Date__c</fullName>
    <label>Last ROE Task Date</label>
    <summarizedField>Opportunity.Last_ROE_Task_Date__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>