force-app/main/default/objects/Account/fields/Last_Sync_Date_5_Days__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Date_5_Days__c</fullName>
    <formula>Admin_Last_Sync_Date__c  &lt;= Today()-5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the box is checked the sync hasn&#39;t run for more than 5 days.</inlineHelpText>
    <label>Last Sync Date 5+ Days</label>
    <type>Checkbox</type>
</CustomField>