force-app/main/default/objects/Account/fields/Lead_Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Lead_Billing_Email__c</fullName>
    <description>Allows us to copy the lead&#39;s email to two places instead of just the Contact&#39;s email</description>
    <label>Lead Billing Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>