force-app/main/default/objects/Account/fields/Lead_Contacts_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contacts_Parent_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies a dummy account that is used for Lead Contact association.</description>
    <inlineHelpText>Identifies a dummy account that is used for Lead Contact association.</inlineHelpText>
    <label>Lead Contacts Parent Account</label>
    <type>Checkbox</type>
</CustomField>