force-app/main/default/objects/Account/fields/Limelight_Contract__c.field-meta.xml
<CustomField>
    <fullName>Limelight_Contract__c</fullName>
    <label>Limelight Contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Coterminous</fullName>
            </value>
            <value>
                <fullName>Month-to-month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>