force-app/main/default/objects/Account/fields/Limelight_URL__c.field-meta.xml
<CustomField>
    <fullName>Limelight_URL__c</fullName>
    <label>Limelight URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>