force-app/main/default/objects/Account/fields/Limelight_URL_for_Healthgrades__c.field-meta.xml
<CustomField>
    <fullName>Limelight_URL_for_Healthgrades__c</fullName>
    <description>Only populated for active Limelight subscribers.

Populated via DLRS- Account Limelight URL</description>
    <label>Limelight URL for Healthgrades</label>
    <length>100</length>
    <type>Text</type>
</CustomField>