force-app/main/default/objects/Account/fields/Logo_Size_Active_Inactive_Customer__c.field-meta.xml
<CustomField>
    <fullName>Logo_Size_Active_Inactive_Customer__c</fullName>
    <formula>Logo_Size_Active_Customer__c + Logo_Size_Inactive_Customer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo Size - Active/Inactive Customer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>