force-app/main/default/objects/Account/fields/Logo_Size_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Logo_Size_Prospect__c</fullName>
    <formula>IF( ISBLANK( ParentId ) || ISNULL( ParentId ) ,

/*If this is the top level parent then calculate based on own values*/
 (IF( ISPICKVAL( Type , &quot;Prospect&quot; ) , 1 , 0 ) + 
 Child_Accts_Prospect__c + 
 Grandchild_Accts_Prospect__c) ,

 IF( ISBLANK( Parent.ParentId ) || ISNULL( Parent.ParentId ) ,

  /*If there isn&#39;t a grandparent then calculate based on parent values*/
  (IF( ISPICKVAL( Parent.Type , &quot;Prospect&quot; ) , 1 , 0 ) + 
  Parent.Child_Accts_Prospect__c + 
  Parent.Grandchild_Accts_Prospect__c) ,

  /*Otherwise calculate based on grandparent values*/
  (IF( ISPICKVAL( Parent.Parent.Type , &quot;Prospect&quot; ) , 1 , 0 ) + 
  Parent.Parent.Child_Accts_Prospect__c + 
  Parent.Parent.Grandchild_Accts_Prospect__c)
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo Size - Prospect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>