force-app/main/default/objects/Account/fields/Logo_Size_Prospect_Active_Customers__c.field-meta.xml
<CustomField>
    <fullName>Logo_Size_Prospect_Active_Customers__c</fullName>
    <description>Logo_Size_Prospect__c + Logo_Size_Active_Customer__c</description>
    <formula>Logo_Size_Prospect__c + Logo_Size_Active_Customer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo Size - Prospect/Active Customers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>