force-app/main/default/objects/Account/fields/Micro_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Micro_Vertical__c</fullName>
    <label>Micro Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Vertical__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Anesthesiology</fullName>
            </value>
            <value>
                <fullName>Audiology</fullName>
            </value>
            <value>
                <fullName>Breast</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Cardiovascular</fullName>
            </value>
            <value>
                <fullName>Cosmetic Dermatology</fullName>
            </value>
            <value>
                <fullName>Diabeties Specialist</fullName>
            </value>
            <value>
                <fullName>Emergency Medicine</fullName>
            </value>
            <value>
                <fullName>Gynecologic</fullName>
            </value>
            <value>
                <fullName>Hematology</fullName>
            </value>
            <value>
                <fullName>Holistic, Integrative, or Naturopathic Medicine</fullName>
            </value>
            <value>
                <fullName>Hospice &amp; Palliative Medicine</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Medical Dermatology</fullName>
            </value>
            <value>
                <fullName>Multi-specialty Group</fullName>
            </value>
            <value>
                <fullName>Nephrology</fullName>
            </value>
            <value>
                <fullName>Pathology</fullName>
            </value>
            <value>
                <fullName>Pediatric</fullName>
            </value>
            <value>
                <fullName>Please Specify --&gt;</fullName>
            </value>
            <value>
                <fullName>Pulmonary Medicine</fullName>
            </value>
            <value>
                <fullName>Radiation</fullName>
            </value>
            <value>
                <fullName>Reproductive Medicine or Fertility Specialist</fullName>
            </value>
            <value>
                <fullName>Rheumatology</fullName>
            </value>
            <value>
                <fullName>Skin</fullName>
            </value>
            <value>
                <fullName>Sleep Disorders</fullName>
            </value>
            <value>
                <fullName>Thoracic</fullName>
            </value>
            <value>
                <fullName>Vascular Surgery (veins)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>