force-app/main/default/objects/Account/fields/Money_Back_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Money_Back_Guarantee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies customers who were sold with the money-back guarantee.</description>
    <label>Money-Back Guarantee</label>
    <type>Checkbox</type>
</CustomField>