force-app/main/default/objects/Account/fields/MostRecentProbableProjectedNumofLocation__c.field-meta.xml
<CustomField>
    <fullName>MostRecentProbableProjectedNumofLocation__c</fullName>
    <label># of Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>