force-app/main/default/objects/Account/fields/MRFMS__c.field-meta.xml
<CustomField>
    <fullName>MRFMS__c</fullName>
    <description>Most Recent First Message Sent - used to help track reactivates</description>
    <inlineHelpText>Most Recent First Message Sent</inlineHelpText>
    <label>MRFMS</label>
    <type>Date</type>
</CustomField>