force-app/main/default/objects/Account/fields/Multi_Location_Subscriber_ID__c.field-meta.xml
<CustomField>
    <fullName>Multi_Location_Subscriber_ID__c</fullName>
    <description>If an account uses a different Subscriber ID to send out messages</description>
    <label>Multi-Location Subscriber ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>