force-app/main/default/objects/Account/fields/Named_Account__c.field-meta.xml
<CustomField>
    <fullName>Named_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this account is being actively worked by the Sales Rep listed.</inlineHelpText>
    <label>Named Account</label>
    <type>Checkbox</type>
</CustomField>