force-app/main/default/objects/Account/fields/New_Customer_Welcome__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_Welcome__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Customer Welcome</label>
    <type>Checkbox</type>
</CustomField>