force-app/main/default/objects/Account/fields/Not_Eligible_for_Support__c.field-meta.xml
<CustomField>
    <fullName>Not_Eligible_for_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the account is currently eligible for support.</description>
    <label>Not Eligible for Support</label>
    <type>Checkbox</type>
</CustomField>