force-app/main/default/objects/Account/fields/Not_Listed_Speciality__c.field-meta.xml
<CustomField>
    <fullName>Not_Listed_Speciality__c</fullName>
    <label>Not Listed Speciality</label>
    <length>30</length>
    <type>Text</type>
</CustomField>