force-app/main/default/objects/Account/fields/Number_of_Grandchild_Customer_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Grandchild_Customer_Accounts__c</fullName>
    <description>Number of child Accounts in multi-level hierarchy. Updated via Lookup Rollup Summary</description>
    <label>Number of Grandchild Customer Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>