force-app/main/default/objects/Account/fields/Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Locations__c</fullName>
    <label>Number of Locations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-9</fullName>
            </value>
            <value>
                <fullName>10-49</fullName>
            </value>
            <value>
                <fullName>50-100</fullName>
            </value>
            <value>
                <fullName>100+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>