force-app/main/default/objects/Account/fields/Number_of_Open_Addenda__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Addenda__c</fullName>
    <description>Set via DLRS.  Used to prevent more than one open Addendum per Account</description>
    <label>Number of Open Addenda</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>