force-app/main/default/objects/Account/fields/Number_of_Open_NPB_Opps__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_NPB_Opps__c</fullName>
    <description>Used to validate that only one NPB Opportunity is open at a time.</description>
    <label>Number of Open NPB Opps</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>New Practice Business, Add Product, Enterprise New Business</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Won, Closed Lost, Not Qualified</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>