force-app/main/default/objects/Account/fields/Number_of_Providers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Providers__c</fullName>
    <label>Number of Providers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-10</fullName>
            </value>
            <value>
                <fullName>11-29</fullName>
            </value>
            <value>
                <fullName>30-49</fullName>
            </value>
            <value>
                <fullName>50+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>