force-app/main/default/objects/Account/fields/of_Open_Sync_Cases__c.field-meta.xml
<CustomField>
    <fullName>of_Open_Sync_Cases__c</fullName>
    <label># of Open Sync Cases</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>