force-app/main/default/objects/Account/fields/Old_Sugar_History__c.field-meta.xml
<CustomField>
    <fullName>Old_Sugar_History__c</fullName>
    <description>Stores the notes from old Sugar</description>
    <label>Old Sugar History</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>