force-app/main/default/objects/Account/fields/Open_Cancel_Requests__c.field-meta.xml
<CustomField>
    <fullName>Open_Cancel_Requests__c</fullName>
    <label>Open Cancel Requests</label>
    <summarizedField>Opportunity.Open_Cancel_Requests__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>