force-app/main/default/objects/Account/fields/Open_Sync_List_Case__c.field-meta.xml
<CustomField>
    <fullName>Open_Sync_List_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Sync List Case</label>
    <type>Checkbox</type>
</CustomField>