force-app/main/default/objects/Account/fields/Parent_Account_Subscriber_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Subscriber_ID__c</fullName>
    <formula>Parent.Subscriber_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Subscriber ID</label>
    <type>Text</type>
</CustomField>