force-app/main/default/objects/Account/fields/Partner_Accounting_Needs__c.field-meta.xml
<CustomField>
    <fullName>Partner_Accounting_Needs__c</fullName>
    <label>Partner Accounting Needs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commissions</fullName>
            </value>
            <value>
                <fullName>3rd Party Billing</fullName>
            </value>
            <value>
                <fullName>Special Promotion</fullName>
            </value>
            <value>
                <fullName>Split Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>