force-app/main/default/objects/Account/fields/Partner_Agreed_MSF__c.field-meta.xml
<CustomField>
    <fullName>Partner_Agreed_MSF__c</fullName>
    <inlineHelpText>This is the negotiated price with this partner for all joint customers</inlineHelpText>
    <label>Partner Agreed MSF</label>
    <length>100</length>
    <type>Text</type>
</CustomField>