force-app/main/default/objects/Account/fields/Partner_Agreed_Setup_Fee__c.field-meta.xml
<CustomField>
    <fullName>Partner_Agreed_Setup_Fee__c</fullName>
    <inlineHelpText>Negotiated Setup fee for all joint customers</inlineHelpText>
    <label>Partner Agreed Setup Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>