force-app/main/default/objects/Account/fields/Partner_Client_Success_Needs__c.field-meta.xml
<CustomField>
    <fullName>Partner_Client_Success_Needs__c</fullName>
    <label>Partner Client Success Needs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Resources</fullName>
            </value>
            <value>
                <fullName>Dedicated Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>