force-app/main/default/objects/Account/fields/Partner_Contract_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contract_Expiration__c</fullName>
    <inlineHelpText>When the contract with this partner expires</inlineHelpText>
    <label>Partner Contract Expiration</label>
    <type>Date</type>
</CustomField>