force-app/main/default/objects/Account/fields/Partner_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_Customer_ID__c</fullName>
    <description>Customer ID from an external partner(ie. Patterson).  Currently set manually.</description>
    <externalId>true</externalId>
    <label>Partner Customer ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>