force-app/main/default/objects/Account/fields/Partner_Engineering_Needs__c.field-meta.xml
<CustomField>
    <fullName>Partner_Engineering_Needs__c</fullName>
    <label>Partner Engineering Needs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>