force-app/main/default/objects/Account/fields/Partner_Marketing_Needs__c.field-meta.xml
<CustomField>
    <fullName>Partner_Marketing_Needs__c</fullName>
    <label>Partner Marketing Needs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Graphics</fullName>
            </value>
            <value>
                <fullName>Slides</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Email Blast</fullName>
            </value>
            <value>
                <fullName>Email Templates</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Webinars</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>