force-app/main/default/objects/Account/fields/Partner_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Partner_Promotion__c</fullName>
    <label>Partner Promotion</label>
    <length>150</length>
    <type>Text</type>
</CustomField>