force-app/main/default/objects/Account/fields/Partner_Sales_Needs__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Needs__c</fullName>
    <label>Partner Sales Needs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Dedicated Sales Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>