force-app/main/default/objects/Account/fields/Partner_Stage__c.field-meta.xml
<CustomField>
    <fullName>Partner_Stage__c</fullName>
    <description>For the partner team to track the status of this relationship</description>
    <inlineHelpText>For partner use only</inlineHelpText>
    <label>Partner Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Radar</fullName>
            </value>
            <value>
                <fullName>Scoping</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Negotiation Review</fullName>
            </value>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>Recycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>