force-app/main/default/objects/Account/fields/Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Status__c</fullName>
    <label>Partner Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>SR Executive Approval</fullName>
            </value>
            <value>
                <fullName>Proposal to Partner</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Signed Agreement</fullName>
            </value>
            <value>
                <fullName>On-boarding</fullName>
            </value>
            <value>
                <fullName>On-going Management</fullName>
            </value>
            <value>
                <fullName>Contract Renewal Approaching</fullName>
            </value>
            <value>
                <fullName>Renegotiate Contract</fullName>
            </value>
            <value>
                <fullName>Extend Current Contract</fullName>
            </value>
            <value>
                <fullName>Terminate Relationship</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>Recycle</fullName>
            </value>
            <value>
                <fullName>Radar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>